# Skytropd

./: .gitattributes  .gitignore  .readthedocs.yaml  MANIFEST.in  NOTICE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build_wheels.yml  ci.yml  publish-pypi.yml
assets/: logo.xml
skytropd/: TropD_Example_Calculations.py  Untitled.ipynb  __init__.py  _fortran_zero_crossing.py  _zero_crossing_module.c  functions.py  meson.build  metrics.py  pygeode_metrics.py  pygtest.py  tutorial.py  xarray_metrics.py  xr_tutorial.ipynb  xrtest.py
skytropd/Fortran/: zero_crossing.f90
skytropd/docs/: Makefile  make.bat  requirements.txt
skytropd/docs/source/: conf.py  helper.rst  index.rst  install.rst  reference.rst  tutorial.rst
skytropd/docs/source/_static/: theme_overrides.css
skytropd/docs/source/_templates/: sidebar_nav.html
testing/: smoke_runtime_wheel.py  smoke_wheel.py  test_fortran_zero_crossing.py  test_functions.py  test_import_alias.py  test_metrics.py  test_xarray_metrics.py
