[metadata]
name = skytropd
version = 2.13.0
description = Community-maintained tropical width metrics package
author = Qianye Su
author_email = suqianye2000@gmail.com
maintainer = Qianye Su
maintainer_email = suqianye2000@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-only
license_files = LICENSE

[options]
packages =
    skytropd
install_requires =
    scipy >= 1.5
    numpy >= 1.19
include_package_data = True
classifiers =
    Programming Language :: Python :: 3
